latest docker progress

--- a/compose-assignment-1/docker-compose.yml
+++ b/compose-assignment-1/docker-compose.yml
@@ -4,8 +4,7 @@
 
 services:
   drupal:
-    image: custom-drupal
-    build: .
+    image: drupal:9
     ports:
       - "8080:80"
     volumes:
@@ -17,12 +16,9 @@ services:
     image: postgres:14
     environment:
       - POSTGRES_PASSWORD=mypasswd
-    volumes:
-      - drupal-data:/var/lib/postgresql/data
 
 volumes:
   drupal-modules:
   drupal-profiles:
   drupal-sites:
   drupal-themes:
-  drupal-data:
